--- a/TextAsset.uplugin
+++ b/TextAsset.uplugin
@@ -1,7 +1,8 @@
 {
 	"FileVersion" : 3,
-	"Version" : 1,
-	"VersionName" : "1.0",
+	"Version" : 4,
+	"VersionName" : "4.0",
+	"EngineVersion" : "4.15.0",
 	"FriendlyName" : "Text Asset",
 	"Description" : "Adds an editable text content asset for personal notes.",
 	"Category" : "Editor",
