--- a/TextAsset.uplugin
+++ b/TextAsset.uplugin
@@ -6,8 +6,8 @@
 	"FriendlyName" : "Text Asset",
 	"Description" : "Adds an editable text content asset for personal notes.",
 	"Category" : "Editor",
-	"CreatedBy" : "Headcrash Industries LLC",
-	"CreatedByURL" : "http://headcrash.industries",
+	"CreatedBy" : "Epic Games Inc",
+	"CreatedByURL" : "http://epicgames.com",
 	"DocsURL" : "",
 	"MarketplaceURL" : "",
 	"SupportURL" : "",
